# canvas-plugin-lab

./: .gitignore  AGENTS.md  README.md
bruno/: lab-order-workflow-example-orders-create-note.yml  (+3 more)
bruno-native/: README.md  bruno.json  lab-order-workflow-example-orders-create-note.bru  lab-order-workflow-example-orders.bru
plugins/lab-order-workflow-example/: plugin-spec.md  pyproject.toml
plugins/lab-order-workflow-example/lab_order_workflow_example/: CANVAS_MANIFEST.json  README.md
plugins/lab-order-workflow-example/lab_order_workflow_example/handlers/: __init__.py  endpoint_handler.py  order_state_handler.py
plugins/lab-order-workflow-example/lab_order_workflow_example/migrations/: 0001_initial.py
plugins/lab-order-workflow-example/lab_order_workflow_example/models/: __init__.py  workflow_state.py
plugins/lab-order-workflow-example/lab_order_workflow_example/services/: __init__.py  hmac_auth.py  order_workflow.py  payload_mapper.py  state_store.py
plugins/lab-order-workflow-example/purchase_flow_lab_orders/: CANVAS_MANIFEST.json  README.md
plugins/lab-order-workflow-example/purchase_flow_lab_orders/handlers/: __init__.py  endpoint_handler.py  order_state_handler.py
plugins/lab-order-workflow-example/purchase_flow_lab_orders/models/: __init__.py  auth_state.py
plugins/lab-order-workflow-example/purchase_flow_lab_orders/services/: __init__.py  hmac_auth.py  order_workflow.py  payload_mapper.py  state_store.py
plugins/lab-order-workflow-example/tests/: conftest.py  test_endpoint_handler.py  test_hmac_auth.py  test_order_state_handler.py
(+3 files in other folders)
