[project]
authors = [
  {email = "engineering@canvasmedical.com", name = "Canvas Team"}
]
dependencies = [
  "canvas[test-utils]"
]
description = "Some description of your project."
license = "MIT"
name = "purchase-flow-lab-orders"
readme = "purchase_flow_lab_orders/README.md"
requires-python = ">=3.11"
version = "0.1.0"

[tool.pytest.ini_options]
python_files = ["*_tests.py", "test_*.py", "tests.py"]
filterwarnings = [
  "ignore:`json_encoders` is deprecated\\.:pydantic.warnings.PydanticDeprecatedSince20",
]
